# PaGiTo

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  build.ps1  build.sh  dev_run.txt  docker-compose.yml  package.json
apps/ModelFitter/: CMakeLists.txt
backend/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.cuda  LICENSE  build.sh  docker-compose.yml  docker-entrypoint.sh
backend/apps/ModelFitter/src/: main.cpp
backend/apps/ModelSimulator/: CMakeLists.txt
backend/apps/ModelSimulator/src/: main.cpp
backend/apps/ModelingFramework/: CMakeLists.txt
backend/apps/ModelingFramework/src/: main.cpp
backend/build_env/: Dockerfile
backend/cmake/: CodeCoverage.cmake
backend/config/: config.json  config2.json
backend/modules/Common/: CMakeLists.txt
backend/modules/Common/inc/cmaes/: cmaes.h  cmaes_optimizer.h  solution.h  weights_information.h
backend/modules/Common/inc/common/: beam_configuration.h  binary_serialization_utility.cpp  binary_serialization_utility.h  detector.h  device.h  experimental_data.h  experimental_model.h  fitting_parameter.h  flat_unitcell.h  image_data.h  job_meta_information.h  layer.h  propagation_coefficients.h  qgrid.h  sample.h  service.h  simulation_description.h  standard_constants.h  standard_defs.h  unitcell.h  unitcell_utility.h  unitcell_v2.h  uuid_generator.h
backend/modules/Common/inc/cuda_types/: standard_vector_types.h
backend/modules/Common/inc/parameter_definitions/: data_containers.h  detector_setup.h  experimental_setup.h  scattering_setup.h  substrate_setup.h  transformation_container.h
backend/modules/Common/src/cmaes/: cmaes.cpp  cmaes_optimizer.cpp  solution.cpp  weights_information.cpp
backend/modules/Common/src/common/: beam_configuration.cpp  detector.cpp  device.cpp  experimental_data.cpp  experimental_model.cpp  fitting_parameter.cpp  flat_unitcell.cpp  image_data.cpp  job_meta_information.cpp  layer.cpp  propagation_coefficients.cpp  qgrid.cpp  sample.cpp  simulation_description.cpp  unitcell.cpp  unitcell_utility.cpp  unitcell_v2.cpp  uuid_generator.cpp
backend/modules/Common/src/parameter_definitions/: detector_setup.cpp  experimental_setup.cpp  scattering_setup.cpp  substrate_setup.cpp  transformation_container.cpp
backend/modules/ConnectionUtility/: CMakeLists.txt
backend/modules/ConnectionUtility/inc/: broker.h  client.h  connector_v2.h  majordomo_utility.h  service.h  service_information.h  worker.h  worker_information.h  worker_request_handler.h
backend/modules/ConnectionUtility/src/: broker.cpp  client.cpp  connector_v2.cpp  majordomo_utility.cpp  service_information.cpp  worker.cpp  worker_information.cpp  worker_request_handler.cpp
backend/modules/GisaxsLib/: CMakeLists.txt
backend/modules/GisaxsLib/GisaxsCpuLib/: CMakeLists.txt
backend/modules/GisaxsLib/GisaxsCpuLib/inc/: cpu_device.h  gisaxs_cpu_core.h
backend/modules/GisaxsLib/GisaxsCpuLib/src/: cpu_device.cpp  gisaxs_cpu_core.cpp
backend/modules/GisaxsLib/GisaxsCudaLib/: CMakeLists.txt
backend/modules/GisaxsLib/GisaxsCudaLib/inc/gpu/core/: event_provider.h  gisaxs_functions.h  gisaxs_functions_v2.h  gpu_device.h  gpu_device_v2.h  gpu_helper.h  gpu_information.h  gpu_memory_block.h  gpu_memory_provider.h  gpu_memory_provider_v2.h  gpu_qgrid.h  random_generator.h  stream.h  (+1 more)
backend/modules/ModelComposer/examples/fit_example/fit_sphere_10nm_0sd/: fitting.json  sphere_0_737.csv
backend/modules/ModelComposer/examples/sim_example/: mysql_test.py
backend/modules/ModelComposer/model_composer/core/: model_composer.py  serialized_fitting_description.capnp  serialized_simulation_description.capnp
backend/modules/ModelComposer/model_composer/util/: fitting.py  util.py
backend/modules/ModelFitter/: CMakeLists.txt
backend/modules/ModelFitter/inc/core/: connector.h  fitting_description.h  fitting_result.h  model_fitter.h  model_fitter_v2.h
backend/modules/ModelFitter/src/core/: connector.cpp  fitting_description.cpp  model_fitter.cpp  model_fitter_v2.cpp  publisher.cpp
backend/modules/ModelSimulator/: CMakeLists.txt
backend/modules/ModelSimulator/inc/core/: model_simulator.h  model_simulator_v2.h  simulation_interval.h
backend/modules/ModelSimulator/inc/util/: cpu_information.h  hardware_information.h  sim_publisher.h  sim_result.h  test_client.h  tinicolormap.hpp  utility.h
backend/modules/ModelSimulator/src/core/: model_simulator.cpp  model_simulator_v2.cpp  simulation_interval.cpp
backend/modules/ModelSimulator/src/util/: distribution_functions.cpp  hardware_information.cpp  sim_connector.cpp  sim_publisher.cpp  sim_result.cpp  test_client.cpp  utility.cpp
backend/modules/ModelSimulator/src/util/linux/: cpu_information.cpp  linux_cpu_information.cpp
backend/modules/ModelSimulator/src/util/windows/: cpu_information.cpp  win_cpu_information.cpp
backend/modules/RabbitMq/: CMakeLists.txt
backend/modules/RabbitMq/inc/: fit_job_client.h  gisaxs_tcp_handler.h  rabbitmq_client.h  rabbitmq_connection.h  rabbitmq_worker.h
backend/modules/RabbitMq/src/: fit_job_client.cpp  gisaxs_tcp_handler.cpp  rabbitmq_client.cpp  rabbitmq_connection.cpp  rabbitmq_worker.cpp
backend/modules/SerializationUtility/: CMakeLists.txt
backend/modules/SerializationUtility/inc/: json_factory.h
backend/modules/SerializationUtility/src/: json_factory.cpp
backend/tests/: CMakeLists.txt
backend/tests/src/: test.cpp  test_cmaes.cpp  test_model_simulator.cpp
modules/ModelFitter/: CMakeLists.txt
modules/ModelFitter/inc/core/: fitting_description.h  publisher.h
modules/ModelFitter/src/core/: fitting_description.cpp  fitting_result.cpp  model_fitter.cpp
modules/ModelSimulator/: CMakeLists.txt
modules/ModelSimulator/inc/core/: simulation_interval.h
modules/ModelSimulator/inc/util/: cpu_information.h  distribution_functions.h  sim_connector.h  sim_publisher.h
modules/ModelSimulator/src/core/: model_simulator.cpp
modules/ModelSimulator/src/util/: sim_connector.cpp  sim_publisher.cpp  sim_result.cpp
tests/: CMakeLists.txt  main.cpp
tests/src/: test_memory_provider.cpp
(+620 files in other folders)
